# poltra

./: .gitignore  README.md
datacollection/: .env.example  .gitignore  test.js  test.py  todo.md  yo.txt
datacollection/dumps/: news.json  newsapi.json  omni.json  svd.json  svidag.json
datacollection/trash/: demo.py  headers.json  jobs.html  repos.json  webscraping.py
frontend/: package-lock.json  package.json
frontend/mobile_app/: .gitignore  App.js  AuthContext.js  README.md  app.config.js  app.json  logIn.js  notes.md  package-lock.json  package.json
frontend/mobile_app/api/: config.js
frontend/mobile_app/assets/colors/: colors.js
frontend/mobile_app/assets/data/: database.json  newsData.js
frontend/mobile_app/components/: SignIn.js  SignInScreen.js  SignInWithOAuth.js  SignUpScreen.js
frontend/mobile_app/context/: AuthContext.js
frontend/mobile_app/login/: logIn.js  phoneNumberConfirmation.js  signUp.js  signUpPhoneNumber.js
frontend/mobile_app/navigation/: AppNav.js  AppStack.js  AuthStack.js  Navbar.js  TabNavigator.js
frontend/mobile_app/navigation/views/: Home.js  Settings.js  Statistics.js
frontend/mobile_app/screens/: HomeScreen.js  HomeTest.js  SettingsScreen.js  StatScreen.js
frontend/web_app/: package-lock.json  package.json
server/: README.md  db.jsonl  main.py  test.http
stuff/: Scraper.py  articles.json  main.py  metadata.json  notes.md  pyproject.toml  requirements.txt  res.json  res2.json  res3.json  resp.json  sum.json  svt.json  test.json  test.py
stuff/data/: svt.json  svt2.json  test.json  trash.py
(+4 files in other folders)
